--- a/app/src/main/res/layout/list_item_note_picker.xml
+++ b/app/src/main/res/layout/list_item_note_picker.xml
@@ -1,145 +1,76 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="@dimen/bu4"
     android:layout_height="wrap_content"
-    android:layout_weight="1">
+    android:background="@color/greyEE">
 
-    <LinearLayout
-        android:id="@+id/view_note"
-        android:layout_width="@dimen/bu4"
-        android:layout_height="wrap_content"
+    <View
+        android:id="@+id/border_top"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/black" />
+
+    <TextView
+        android:id="@+id/text_upper_note"
+        android:layout_width="@dimen/bu3"
+        android:layout_height="@dimen/bu3"
+        android:layout_below="@+id/border_top"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/bu0_5"
+        android:clickable="true"
         android:gravity="center"
-        android:orientation="vertical">
+        android:maxLines="1"
+        android:textSize="@dimen/text_size_42px" />
 
-        <TextView
-            android:id="@+id/text_upper_note_bend2"
-            android:layout_width="@dimen/bu3"
-            android:layout_height="@dimen/bu3"
-            android:layout_marginTop="@dimen/bu0_5"
-            android:clickable="true"
-            android:gravity="center"
-            android:maxLines="1"
-            android:textSize="@dimen/text_size_42px"
-            android:visibility="gone" />
+    <RelativeLayout
+        android:id="@+id/view_middle_hole"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/bu2_5"
+        android:layout_below="@+id/text_upper_note"
+        android:layout_marginBottom="@dimen/bu0_5"
+        android:layout_marginTop="@dimen/bu0_5"
+        android:background="@color/greyAA">
 
-        <TextView
-            android:id="@+id/text_upper_note_bend1"
-            android:layout_width="@dimen/bu3"
-            android:layout_height="@dimen/bu3"
+        <View
+            android:layout_width="@dimen/bu2"
+            android:layout_height="@dimen/bu2"
+            android:layout_centerInParent="true"
             android:layout_marginBottom="@dimen/bu0_5"
             android:layout_marginTop="@dimen/bu0_5"
-            android:clickable="true"
-            android:gravity="center"
-            android:maxLines="1"
-            android:textSize="@dimen/text_size_42px"
-            android:visibility="gone" />
+            android:background="@color/black" />
+    </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/text_lower_note"
+        android:layout_width="@dimen/bu3"
+        android:layout_height="@dimen/bu3"
+        android:layout_below="@+id/view_middle_hole"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/bu0_5"
+        android:clickable="true"
+        android:gravity="center"
+        android:maxLines="1"
+        android:textSize="@dimen/text_size_42px" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/greyEE"
-                android:gravity="center"
-                android:orientation="vertical">
+    <View
+        android:id="@+id/border_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/text_lower_note"
+        android:background="@color/black" />
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/black" />
+    <View
+        android:id="@+id/border_left"
+        android:layout_width="1dp"
+        android:layout_height="128dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:background="@color/black" />
 
-                <TextView
-                    android:id="@+id/text_upper_note"
-                    android:layout_width="@dimen/bu3"
-                    android:layout_height="@dimen/bu3"
-                    android:layout_marginTop="@dimen/bu0_5"
-                    android:clickable="true"
-                    android:gravity="center"
-                    android:maxLines="1"
-                    android:textSize="@dimen/text_size_42px" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/bu2_5"
-                    android:layout_marginBottom="@dimen/bu0_5"
-                    android:layout_marginTop="@dimen/bu0_5"
-                    android:background="@color/greyAA">
-
-                    <View
-                        android:layout_width="@dimen/bu2"
-                        android:layout_height="@dimen/bu2"
-                        android:layout_centerInParent="true"
-                        android:layout_marginBottom="@dimen/bu0_5"
-                        android:layout_marginTop="@dimen/bu0_5"
-                        android:background="@color/black" />
-                </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/text_lower_note"
-                    android:layout_width="@dimen/bu3"
-                    android:layout_height="@dimen/bu3"
-                    android:layout_marginBottom="@dimen/bu0_5"
-                    android:clickable="true"
-                    android:gravity="center"
-                    android:maxLines="1"
-                    android:textSize="@dimen/text_size_42px" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/black" />
-            </LinearLayout>
-
-            <View
-                android:id="@+id/border_left"
-                android:layout_width="1dp"
-                android:layout_height="128dp"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:background="@color/black" />
-
-            <View
-                android:id="@+id/border_right"
-                android:layout_width="1dp"
-                android:layout_height="@dimen/bu10_5"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:background="@color/black" />
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/text_lower_note_bend1"
-            android:layout_width="@dimen/bu3"
-            android:layout_height="@dimen/bu3"
-            android:layout_marginBottom="@dimen/bu0_5"
-            android:layout_marginTop="@dimen/bu0_5"
-            android:clickable="true"
-            android:gravity="center"
-            android:maxLines="1"
-            android:textSize="@dimen/text_size_42px"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/text_lower_note_bend2"
-            android:layout_width="@dimen/bu3"
-            android:layout_height="@dimen/bu3"
-            android:layout_marginBottom="@dimen/bu0_5"
-            android:clickable="true"
-            android:gravity="center"
-            android:maxLines="1"
-            android:textSize="@dimen/text_size_42px"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/text_lower_note_bend3"
-            android:layout_width="@dimen/bu3"
-            android:layout_height="@dimen/bu3"
-            android:layout_marginBottom="@dimen/bu0_5"
-            android:clickable="true"
-            android:gravity="center"
-            android:maxLines="1"
-            android:textSize="@dimen/text_size_42px"
-            android:visibility="gone" />
-    </LinearLayout>
-</LinearLayout>
+    <View
+        android:id="@+id/border_right"
+        android:layout_width="1dp"
+        android:layout_height="@dimen/bu10_5"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="@color/black" />
+</RelativeLayout>
