--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white_20">#33FFFFFF</color>
     <color name="dark_red_30">#4D3C010B</color>
     <color name="dark_red_50">#803C010B</color>
+    <color name="grey_50">#80EEEEEE</color>
     <color name="black_30">#4A000000</color>
     <color name="black">#1A2634</color>
     <color name="purple">#8832ba</color>
