--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -200,6 +200,7 @@
                 android:id="@+id/view_qa"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/bu5"
+                android:visibility="gone"
                 android:background="?android:attr/selectableItemBackground"
                 android:clickable="true">
 
