--- a/app/src/main/res/layout/layout_note_picker.xml
+++ b/app/src/main/res/layout/layout_note_picker.xml
@@ -364,7 +364,7 @@
             android:gravity="center_vertical"
             android:hint="@string/note_picker_view_hint_section_text"
             android:imeOptions="actionDone"
-            android:inputType="textVisiblePassword|textCapSentences"
+            android:inputType="textEmailAddress|textCapSentences"
             android:maxLines="1"
             android:paddingBottom="@dimen/bu0_5"
             android:paddingLeft="@dimen/bu1"
