--- a/app/src/main/res/layout/activity_credits.xml
+++ b/app/src/main/res/layout/activity_credits.xml
@@ -125,6 +125,13 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_30px" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cole Bemis"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_30px" />
+
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
