--- a/app/src/main/res/menu/menu_song_activity.xml
+++ b/app/src/main/res/menu/menu_song_activity.xml
@@ -19,13 +19,8 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_add_audio_file"
-        android:title="@string/song_activity_menu_add_audio_file"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/action_remove_audio_file"
-        android:title="@string/song_activity_menu_remove_audio_file"
+        android:id="@+id/action_instrumental"
+        android:title="@string/song_activity_menu_instrumental"
         app:showAsAction="never" />
 
     <item
