--- a/app/src/main/res/layout/dialog_time_picker.xml
+++ b/app/src/main/res/layout/dialog_time_picker.xml
@@ -15,11 +15,25 @@
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/text_size_40px" />
 
+    <TextView
+        android:id="@+id/text_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text_title"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="@dimen/bu3"
+        android:layout_marginRight="@dimen/bu3"
+        android:layout_marginTop="@dimen/bu1_5"
+        android:gravity="center"
+        android:text="@string/time_picker_dialog_description"
+        android:textColor="@color/grey99"
+        android:textSize="@dimen/text_size_30px" />
+
     <LinearLayout
         android:id="@+id/layout_number_pickers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/text_title"
+        android:layout_below="@+id/text_description"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/bu1"
         android:orientation="horizontal">
